@@ -1,3 +1,9 @@
+2009-02-16  Aurimas Juška  <aurisj@svn.gnome.org>
+
+	* app/widgets/gimptagentry.c (gimp_tag_entry_commit_tags),
+	(gimp_tag_entry_strip_extra_whitespace): don't cause tag query
+	after focus-out. Fixes annoying bug.
+
 2009-02-14  Sven Neumann  <sven@gimp.org>
 
 	Bug 99457 – Support for dynamics on tilt
